# Nivara-AREIS

./: .env.example  .env.production.example  .env.render.example  .gitignore  CREATE-DESKTOP-SHORTCUT.bat  Fix-NIVARA-Shortcut.bat  Install-NIVARA-Desktop-Shortcut.bat  Install-NIVARA-Desktop-Shortcut.sh  Open-Streamlit-Deploy.bat  README.md  dashboard.url  docker-compose.production.yml  docker-compose.yml  fix_workflows.py  render.env.example  render.yaml  requirements-render.txt  requirements.txt  streamlit_app.py  streamlit_deploy.url
.streamlit/: config.toml
agents/: .env.example  Dockerfile  README.md  pyproject.toml
agents/src/nivara/: __init__.py  auth.py  config.py  main.py  regions.py
agents/src/nivara/agents/: __init__.py  analytics.py  appointment_scheduler.py  base.py  ceo.py  cmo.py  competitor_spy.py  content_strategist.py  coo.py  copywriter.py  crm.py  email_marketer.py  lead_qualification.py  location_scout.py  market_analyst.py  paid_ads_manager.py  regulatory_watch.py  sales_coach.py  seo_agent.py  social_media_manager.py  visual_designer.py  whatsapp_agent.py
agents/src/nivara/db/: supabase_client.py
agents/src/nivara/integrations/: higgsfield_client.py  pixverse_client.py  storage_client.py  veo_client.py
agents/src/nivara/llm/: llm_client.py  ollama_client.py
agents/src/nivara/orchestrator/: graph.py
dashboard/: Dockerfile  app.py  config.py  fast_db.py  pipeline_sync.py  requirements.txt  safe_data.py  start.sh  theme.py
docs/: AGENT_ROSTER.md  ARCHITECTURE.md  DASHBOARD_ACCESS.md  DEPLOYMENT.md  FREE_TIER_LIMITS.md  PHASE1_SETUP.md  (+14 more)
(+70 files in other folders)
