[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nivara-agents"
version = "0.1.0"
description = "NIVARA REALTY LangGraph agent orchestration layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
    "supabase>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6.0", "mypy>=1.11.0"]

[project.scripts]
nivara-orchestrator = "nivara.main:run_server"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
